fix small bugs
